@@ -42,7 +42,29 @@ name|java
 operator|.
 name|util
 operator|.
+name|Locale
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Random
+import|;
+end_import
+begin_import
+import|import
+name|com
+operator|.
+name|carrotsearch
+operator|.
+name|randomizedtesting
+operator|.
+name|rules
+operator|.
+name|SystemPropertiesRestoreRule
 import|;
 end_import
 begin_import
@@ -64,11 +86,9 @@ name|org
 operator|.
 name|apache
 operator|.
-name|lucene
+name|http
 operator|.
-name|util
-operator|.
-name|LuceneTestCase
+name|Header
 import|;
 end_import
 begin_import
@@ -77,11 +97,52 @@ name|org
 operator|.
 name|apache
 operator|.
-name|lucene
+name|http
 operator|.
-name|util
+name|HttpResponse
+import|;
+end_import
+begin_import
+import|import
+name|org
 operator|.
-name|TestUtil
+name|apache
+operator|.
+name|http
+operator|.
+name|client
+operator|.
+name|HttpClient
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|http
+operator|.
+name|client
+operator|.
+name|methods
+operator|.
+name|HttpGet
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|http
+operator|.
+name|client
+operator|.
+name|methods
+operator|.
+name|HttpRequestBase
 import|;
 end_import
 begin_import
@@ -104,6 +165,23 @@ operator|.
 name|solr
 operator|.
 name|SolrTestCaseJ4
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|client
+operator|.
+name|solrj
+operator|.
+name|impl
+operator|.
+name|HttpClientUtil
 import|;
 end_import
 begin_import
@@ -228,19 +306,6 @@ operator|.
 name|rules
 operator|.
 name|TestRule
-import|;
-end_import
-begin_import
-import|import
-name|com
-operator|.
-name|carrotsearch
-operator|.
-name|randomizedtesting
-operator|.
-name|rules
-operator|.
-name|SystemPropertiesRestoreRule
 import|;
 end_import
 begin_comment
@@ -564,6 +629,80 @@ name|bytes
 argument_list|)
 expr_stmt|;
 comment|// real error will be an exception
+name|HttpClient
+name|client
+init|=
+name|HttpClientUtil
+operator|.
+name|createClient
+argument_list|(
+literal|null
+argument_list|)
+decl_stmt|;
+name|HttpRequestBase
+name|m
+init|=
+operator|new
+name|HttpGet
+argument_list|(
+name|adminPath
+argument_list|)
+decl_stmt|;
+name|HttpResponse
+name|response
+init|=
+name|client
+operator|.
+name|execute
+argument_list|(
+name|m
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|200
+argument_list|,
+name|response
+operator|.
+name|getStatusLine
+argument_list|()
+operator|.
+name|getStatusCode
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|Header
+name|header
+init|=
+name|response
+operator|.
+name|getFirstHeader
+argument_list|(
+literal|"X-Frame-Options"
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"DENY"
+argument_list|,
+name|header
+operator|.
+name|getValue
+argument_list|()
+operator|.
+name|toUpperCase
+argument_list|(
+name|Locale
+operator|.
+name|ROOT
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|m
+operator|.
+name|releaseConnection
+argument_list|()
+expr_stmt|;
 block|}
 block|}
 end_class
